--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,9 @@
-name: Setup Python
-uses: actions/setup-python@v5.1.0
+name: Upload Python
+
 on:
-  python-version: ["3.7","3.8","3.9", "3.10", "3.11"]
+  release:
+    types: [published]
+
+permissions:
+  contents: read
+
