--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,15 @@
-- name: Search Text
-  # You may pin to the exact commit or the version.
-  # uses: vrsoftbr/search-text@004b847e1e436a12d85d20f653dd8a2a509aa3e9
-  uses: vrsoftbr/search-text@v1
-  with:
+name: Search Text
+on:
+  release:
+    types: [published]
+#jobs:
+ # - uses: vrsoftbr/search-text@v1
+  #with:
     # Text to search in files content
-    text: 
+    #text: 'Created'
     # File pattern to search files that match (Ex.: *.ts or *.{js.ts} to multiples)
-    include: 
+    #include: 
     # Directory to be ignored (Ex.: node_modules or {node_modules,coverage} to multiples)
-    exclude-dir: # optional
+    #exclude-dir: # optional
     # When find, throw a error?
-    error-on-find: 
-          
+    #error-on-find: 'Error-Message'
